--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 :root{
     /*primary colors*/
-    --primary-green: #61f2f5;
+    --primary-green: #48cfad;
     --primary-gray: #434a54;
     --light-gray-primary: #e6e9ed;
     --dark-gray: #ccd1d9;
@@ -13,3 +13,121 @@
     --font-roboto: 'Roboto', sans-serif;
     --font-roboto-mono: 'Roboto Mono', monospace;
 }
+
+
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html{
+    font-size: 62.5%;
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    font-family: var(--font-roboto);
+}
+
+/*-------------------------------------------- social media fonts*/
+@font-face {
+    font-family: "Flaticon";
+    src: url("<vbnm./Flaticon.eot");
+    src: url("../assets/fonts/Flaticon.eot?#iefix") format("embedded-opentype"),
+         url("../assets/fonts/Flaticon.woff") format("woff"),
+         url("../assets/fonts/Flaticon.ttf") format("truetype"),
+         url("../assets/fonts/Flaticon.svg#Flaticon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @media screen and (-webkit-min-device-pixel-ratio:0) {
+    @font-face {
+      font-family: "Flaticon";
+      src: url("../assets/fonts/Flaticon.svg#Flaticon") format("svg");
+    }
+  }
+  
+  [class^="flaticon-"]:before, [class*=" flaticon-"]:before,
+  [class^="flaticon-"]:after, [class*=" flaticon-"]:after {   
+        font-family: Flaticon;
+        font-size: 20px;
+        font-style: normal;
+        margin-left: 20px;
+  }
+  
+  .flaticon-001-facebook:before { content: "\f100"; }
+  .flaticon-002-twitter:before { content: "\f101"; }
+  .flaticon-008-youtube:before { content: "\f107"; }
+  .flaticon-010-linkedin:before { content: "\f109"; }
+  .flaticon-011-instagram:before { content: "\f10a"; }  
+
+/*-------------------------------------------- header*/
+a{
+    text-decoration: none;
+    color: var(--light-gray-primary)
+}
+
+header{
+    width: 100%;
+    height: 150px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+header .header__container--icons{
+    width: 100%;
+    height: 50px;
+    display: grid;
+    background-color: var(--primary-green);
+}
+
+header .header__container--icons .icons--list{
+    width: 300px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    justify-self: end;
+    margin-right: 4em;
+}
+
+header .header__container--icons .social-media::before{
+    color: white;
+}
+
+header .header__container--nav{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 100px;
+}
+
+header .header__container--nav .nav--logo{
+    margin-left: 4em;
+}
+
+header .header__container--nav .nav--logo img{
+    width: 220px;
+    margin-top: 10px;
+}
+
+header .header__container--nav .nav--about{
+    display: flex;
+    align-items: center;
+    justify-self: flex-end;
+    margin-right: 5em;
+}
+
+header .header__container--nav .nav--about a{
+    font-size: 2rem;
+    font-family: var(--font-roboto-mono);
+}
+
+header .header__container--nav .nav--about a:hover{
+    border-bottom: .2rem solid var(--primary-green);
+}
+
+/*-------------------------------------------- main*/
