--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,8 @@ a{
 }
 
 header{
-    width: 100%;
+    width: 100vw;
+    min-width: 320px;
     height: 150px;
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -86,7 +87,7 @@ header .header__container--icons{
 }
 
 header .header__container--icons .icons--list{
-    width: 300px;
+    width: 200px;
     height: auto;
     display: flex;
     align-items: center;
@@ -101,16 +102,16 @@ header .header__container--icons .social-media::before{
 
 header .header__container--nav{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     height: 100px;
 }
 
 header .header__container--nav .nav--logo{
-    margin-left: 4em;
+    margin-left: 2em;
 }
 
 header .header__container--nav .nav--logo img{
-    width: 220px;
+    width: 200px;
     margin-top: 10px;
 }
 
@@ -118,7 +119,7 @@ header .header__container--nav .nav--about{
     display: flex;
     align-items: center;
     justify-self: flex-end;
-    margin-right: 5em;
+    margin-right: 2em;
 }
 
 header .header__container--nav .nav--about a{
@@ -134,9 +135,42 @@ header .header__container--nav .nav--about a:hover{
 /*-------------------------------------------- main*/
 main{
     width: 100vw;
+    min-width: 320px;
     height: 100vh;
+    padding: 1em;
     background-image: url('../assets/images/Cover.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+ 
+main .main__section--heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+main .main__section--heading .heading--contain{
+    margin-top: 20%;
+}
+
+main .heading--contain h1{
+    font-family: var(--font-roboto-mono);
+    font-size: 4rem;
+    font-weight: 700;
+    margin-bottom: 1em;
+    color: white;
+}
+
+main .heading--contain button{
+    width: 30%;
+    max-width: 200px;
+    height: 35px;
+    font-size: 1.4rem;
+    font-weight: 300;
+    background-color: var(--primary-green);
+    color: white;
+    border-radius: 5px;
+    border: none;
 }
