--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ a{
 }
 
 header{
-    width: 100vh;
+    width: 100vw;
     min-width: 320px;
     height: 150px;
     display: grid;
@@ -79,7 +79,7 @@ header{
 }
 
 header .header__container--icons{
-    width: 100%;
+    width: 100vw;
     height: 50px;
     display: grid;
     background-color: var(--primary-green);
@@ -104,10 +104,7 @@ header .header__container--nav{
     width: 100vw;
     grid-template-columns: repeat(2, 1fr);
     height: 100px;
-}
-
-header .header__container--nav .nav--logo{
-    margin-left: 2em;
+    padding: 1em;
 }
 
 header .header__container--nav .nav--logo img{
@@ -119,7 +116,7 @@ header .header__container--nav .nav--about{
     display: flex;
     align-items: center;
     justify-self: flex-end;
-    margin-right: 2em;
+  
 }
 
 header .header__container--nav .nav--about a{
