--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,11 @@ main .heading--contain button{
     margin: 0 auto;
 }
 
+.main__blogs .grid--container{
+    max-width: 900px;
+    margin: auto;
+}
+
 .main__blogs .main__blogs--container{
     background-color: var(--light-gray-primary);
     padding: 0 2em 4em;
